# genedbot_rs

./: .travis.yml  AUTHORS  Cargo.toml  Dockerfile  README.md  run_all.sh  run_all_on_farm.sh
src/: evidence.rs  gene.rs  genedbot.rs  literature.rs  loader.rs  main.rs  orthologs.rs  protein.rs
test_files/: test.gaf
