[package]
name = "genedbot"
version = "0.1.0"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2018"

[dependencies]
#wikibase = "0.3.7"
#wikibase = { path = "../wikibase_rs" }
wikibase = { git="https://gitlab.com/tobias47n9e/wikibase_rs"}

bio = { git="https://github.com/magnusmanske/rust-bio.git" , branch="gaf_file_support" }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1"
libflate = "*"
config = "*"
chrono = "*"
lazy_static = "1"
regex = "1"
percent-encoding = "1"
clap = "2"
papers = { git="https://github.com/magnusmanske/papers.git"}
